--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
       </head>
   <body>
     <h1>Hello there, awesome person!</h1>
-    <image src="https://avatars0.githubusercontent.com/u/48380435?v=4">
+    <img src="https://avatars0.githubusercontent.com/u/48380435?v=4">
   </body>
 </html>
