--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title>Just show you this is a title!</title>
+    <title>My favorite sites</title>
+    <link rel="stylesheet" href="style.css">
       </head>
   <body>
     <h1>Hello there, awesome person!</h1>
